# AML-MultiAgent-RAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
backend/agents/: __init__.py  confidence_agent.py  consistency_agent.py  orchestrator.py  rag_agent.py
backend/api/: main.py
backend/api/routes/: multi_agent.py  query.py
backend/core/: __init__.py
backend/core/config/: settings.py
backend/services/: __init__.py
backend/services/document_processing/: pdf_processor.py  text_splitter.py
backend/services/embeddings/: openai_embeddings.py
backend/services/vector_db/: qdrant_client.py
